{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 1259,
  "lineage": "51f4c045-8432-e7d2-2667-a11ef9e68066",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hydra_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:internet-gateway/igw-050995457c1ca983a",
            "id": "igw-050995457c1ca983a",
            "owner_id": "616004226956",
            "tags": {
              "Name": "hydra_igw"
            },
            "tags_all": {
              "Name": "hydra_igw"
            },
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hydra_aws_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:loadbalancer/net/hydra-aws-lb/f455d424b17eae09",
            "arn_suffix": "net/hydra-aws-lb/f455d424b17eae09",
            "dns_name": "hydra-aws-lb-f455d424b17eae09.elb.ap-northeast-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:loadbalancer/net/hydra-aws-lb/f455d424b17eae09",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "hydra-aws-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0192e6c85f06d2fbe"
              },
              {
                "subnet_id": "subnet-091f1a5b2ae3732fd"
              },
              {
                "subnet_id": "subnet-0b5a7670dda70306b"
              }
            ],
            "subnets": [
              "subnet-0192e6c85f06d2fbe",
              "subnet-091f1a5b2ae3732fd",
              "subnet-0b5a7670dda70306b"
            ],
            "vpc_id": "vpc-06740a3dc1f56d4b1",
            "zone_id": "Z31USIVHYNEOWT"
          },
          "dependencies": [
            "aws_subnet.hydra_public_subnet_d",
            "aws_vpc.hydra_vpc",
            "aws_subnet.hydra_public_subnet_a",
            "aws_subnet.hydra_public_subnet_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hydra_lb_listener_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:listener/net/hydra-aws-lb/f455d424b17eae09/01e765e57cffde7a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:targetgroup/hydra-lb-tg-1/5e0658b7a100e470",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:listener/net/hydra-aws-lb/f455d424b17eae09/01e765e57cffde7a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:loadbalancer/net/hydra-aws-lb/f455d424b17eae09",
            "port": 4444,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.hydra_aws_lb",
            "aws_lb_target_group.hydra_lb_tg_1",
            "aws_subnet.hydra_public_subnet_a",
            "aws_subnet.hydra_public_subnet_c",
            "aws_subnet.hydra_public_subnet_d",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hydra_lb_listener_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:listener/net/hydra-aws-lb/f455d424b17eae09/c9da67f650a2bc8f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:targetgroup/hydra-lb-tg-2/6a2312b0f2dc9edb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:listener/net/hydra-aws-lb/f455d424b17eae09/c9da67f650a2bc8f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:loadbalancer/net/hydra-aws-lb/f455d424b17eae09",
            "port": 4445,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.hydra_aws_lb",
            "aws_lb_target_group.hydra_lb_tg_2",
            "aws_subnet.hydra_public_subnet_a",
            "aws_subnet.hydra_public_subnet_c",
            "aws_subnet.hydra_public_subnet_d",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hydra_lb_tg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:targetgroup/hydra-lb-tg-1/5e0658b7a100e470",
            "arn_suffix": "targetgroup/hydra-lb-tg-1/5e0658b7a100e470",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:targetgroup/hydra-lb-tg-1/5e0658b7a100e470",
            "lambda_multi_value_headers_enabled": false,
            "name": "hydra-lb-tg-1",
            "port": 4444,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hydra_lb_tg_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:targetgroup/hydra-lb-tg-2/6a2312b0f2dc9edb",
            "arn_suffix": "targetgroup/hydra-lb-tg-2/6a2312b0f2dc9edb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:616004226956:targetgroup/hydra-lb-tg-2/6a2312b0f2dc9edb",
            "lambda_multi_value_headers_enabled": false,
            "name": "hydra-lb-tg-2",
            "port": 4445,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "hydra_rt_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f0b0ff4ddfe729c",
            "original_route_table_id": "rtb-03d198c0953bccaad",
            "route_table_id": "rtb-046b88ea19fe67e72",
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_internet_gateway.hydra_igw",
            "aws_route_table.hydra_rt",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hydra_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:route-table/rtb-046b88ea19fe67e72",
            "id": "rtb-046b88ea19fe67e72",
            "owner_id": "616004226956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-050995457c1ca983a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hydra_rt"
            },
            "tags_all": {
              "Name": "hydra_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hydra_igw",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hydra_rt_public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de8c7e243faf82ec",
            "route_table_id": "rtb-046b88ea19fe67e72",
            "subnet_id": "subnet-0192e6c85f06d2fbe"
          },
          "dependencies": [
            "aws_internet_gateway.hydra_igw",
            "aws_route_table.hydra_rt",
            "aws_subnet.hydra_public_subnet_a",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hydra_rt_public_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021a1d40d681a6f1c",
            "route_table_id": "rtb-046b88ea19fe67e72",
            "subnet_id": "subnet-0b5a7670dda70306b"
          },
          "dependencies": [
            "aws_route_table.hydra_rt",
            "aws_subnet.hydra_public_subnet_c",
            "aws_vpc.hydra_vpc",
            "aws_internet_gateway.hydra_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hydra_rt_public_subnet_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ce7ce8f1e304934",
            "route_table_id": "rtb-046b88ea19fe67e72",
            "subnet_id": "subnet-091f1a5b2ae3732fd"
          },
          "dependencies": [
            "aws_subnet.hydra_public_subnet_d",
            "aws_vpc.hydra_vpc",
            "aws_internet_gateway.hydra_igw",
            "aws_route_table.hydra_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_facede_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:security-group/sg-02043ac24ff595197",
            "description": "api_facede_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02043ac24ff595197",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "api_facede_sg",
            "name_prefix": "",
            "owner_id": "616004226956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api_facede_sg"
            },
            "tags_all": {
              "Name": "api_facede_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hydra_rds_proxy_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:security-group/sg-0cb15f0a389ea1c9c",
            "description": "hydra_rds_proxy_sg",
            "egress": [],
            "id": "sg-0cb15f0a389ea1c9c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02043ac24ff595197"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "hydra_rds_proxy_sg",
            "name_prefix": "",
            "owner_id": "616004226956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hydra_rds_proxy_sg"
            },
            "tags_all": {
              "Name": "hydra_rds_proxy_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hydra_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:security-group/sg-0cdf06014fc4d2a42",
            "description": "RDS service security",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdf06014fc4d2a42",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "hydra_rds_sg",
            "name_prefix": "",
            "owner_id": "616004226956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hydra_rds_sg"
            },
            "tags_all": {
              "Name": "hydra_rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hydra_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:security-group/sg-03be298b1486709b2",
            "description": "hydra_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03be298b1486709b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4444,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4444
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4445,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4445
              }
            ],
            "name": "hydra_sg",
            "name_prefix": "",
            "owner_id": "616004226956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hydra_sg"
            },
            "tags_all": {
              "Name": "hydra_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "api_facede_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-33778235",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02043ac24ff595197",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hydra_vpc",
            "aws_security_group.api_facede_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "hydra_rds_proxy_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3559060639",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb15f0a389ea1c9c",
            "self": false,
            "source_security_group_id": "sg-02043ac24ff595197",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_facede_sg",
            "aws_security_group.hydra_rds_proxy_sg",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "hydra_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-4239927804",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cdf06014fc4d2a42",
            "self": false,
            "source_security_group_id": "sg-0cb15f0a389ea1c9c",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_facede_sg",
            "aws_security_group.hydra_rds_proxy_sg",
            "aws_security_group.hydra_rds_sg",
            "aws_security_group_rule.hydra_rds_proxy_sg",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "hydra_sg_rule_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 4444,
            "id": "sgrule-1377683170",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03be298b1486709b2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4444,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hydra_vpc",
            "aws_security_group.hydra_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "hydra_sg_rule_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 4445,
            "id": "sgrule-2956950241",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03be298b1486709b2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4445,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.hydra_sg",
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "api_facede_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:subnet/subnet-095e6d21f3b494b4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.80.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095e6d21f3b494b4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616004226956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api_facede_subnet_a"
            },
            "tags_all": {
              "Name": "api_facede_subnet_a"
            },
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "api_facede_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:subnet/subnet-0df7a84c9153387aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.81.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df7a84c9153387aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616004226956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api_facede_subnet_c"
            },
            "tags_all": {
              "Name": "api_facede_subnet_c"
            },
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "api_facede_subnet_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:subnet/subnet-0875b8076a230ad28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.82.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0875b8076a230ad28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616004226956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api_facede_subnet_d"
            },
            "tags_all": {
              "Name": "api_facede_subnet_d"
            },
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hydra_private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:subnet/subnet-040b3c60dfab5c8a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040b3c60dfab5c8a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616004226956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hydra_private_subnet_a"
            },
            "tags_all": {
              "Name": "hydra_private_subnet_a"
            },
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hydra_private_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:subnet/subnet-07656c7fd9529637b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07656c7fd9529637b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616004226956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hydra_private_subnet_c"
            },
            "tags_all": {
              "Name": "hydra_private_subnet_c"
            },
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hydra_private_subnet_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:subnet/subnet-01e6c1e02562fb591",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.60.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e6c1e02562fb591",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616004226956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hydra_private_subnet_d"
            },
            "tags_all": {
              "Name": "hydra_private_subnet_d"
            },
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hydra_public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:subnet/subnet-0192e6c85f06d2fbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0192e6c85f06d2fbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616004226956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hydra_public_subnet_a"
            },
            "tags_all": {
              "Name": "hydra_public_subnet_a"
            },
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hydra_public_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:subnet/subnet-0b5a7670dda70306b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5a7670dda70306b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616004226956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hydra_public_subnet_c"
            },
            "tags_all": {
              "Name": "hydra_public_subnet_c"
            },
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hydra_public_subnet_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:subnet/subnet-091f1a5b2ae3732fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091f1a5b2ae3732fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616004226956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hydra_public_subnet_d"
            },
            "tags_all": {
              "Name": "hydra_public_subnet_d"
            },
            "vpc_id": "vpc-06740a3dc1f56d4b1"
          },
          "dependencies": [
            "aws_vpc.hydra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hydra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:616004226956:vpc/vpc-06740a3dc1f56d4b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d1773737f1070e8f",
            "default_route_table_id": "rtb-046b88ea19fe67e72",
            "default_security_group_id": "sg-0eef5aa052c4366ed",
            "dhcp_options_id": "dopt-49aca12e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06740a3dc1f56d4b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-046b88ea19fe67e72",
            "owner_id": "616004226956",
            "tags": {
              "Name": "hydra-vpc"
            },
            "tags_all": {
              "Name": "hydra-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}